@@ -38,9 +38,9 @@ if (!$gallery) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = "1.3.5-cvs-b22";
+$gallery->version = "1.3.5-cvs-item_owner_branch-b1";
 $gallery->config_version = 36;
-$gallery->album_version = 10;
+$gallery->album_version = 11;
 $gallery->remote_protocol_version = 1;
 $gallery->url = "http://gallery.sourceforge.net";
 
