@@ -437,7 +437,7 @@ function processFile($file, $tag, $name, $setCaption="") {
                 $caption = "";
             }
 
-	        $err = $gallery->album->addPhoto($file, $tag, $mangledFilename, $caption);
+            	$err = $gallery->album->addPhoto($file, $tag, $mangledFilename, $caption, "", array(), $gallery->user->getUid());
 	        if (!$err) {
 	            /* resize the photo if needed */
 	            if ($gallery->album->fields["resize_size"] > 0 && isImage($tag)) {
