@@ -1,3 +1,10 @@
+2003-06-23  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-item_owner_branch-b1
+	
+	* Added first cut of code to add item owners to photos etc.  Ready for
+	  review, comment, modification and testing.  Possibly some of the 
+	  functionality should move to permissions from properties. Default 
+	  values need to be added to config.
+
 2003-06-19  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.5-cvs-b22
 
 	* Fixed error in Config. Wizard where Step 1 would incorrectly
